docker/openshift/deployment.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: api-staging
  namespace: vshn-demoapp1
  labels:
    app: api-staging
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
  triggers:
    - type: ImageChange
      imageChangeParams:
        containerNames:
          - api-staging
        from:
          kind: ImageStreamTag
          namespace: vshn-demoapp1
          name: 'api:latest'
  replicas: 1
  test: false
  selector:
    app: api-staging
    deploymentconfig: api-staging
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api-staging
        deploymentconfig: api-staging
      annotations:
        openshift.io/container.api-staging.image.entrypoint: '["container-entrypoint","/usr/libexec/s2i/run"]'
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - name: api-staging
          image: '172.30.1.1:5000/vshn-demoapp1/api:latest'
          ports:
            - containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
status:
