docker/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-staging
  namespace: vshn-demoapp1
  labels:
    app: api-staging
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  ports:
    -
      name: 9000-tcp
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app: api-staging
    deploymentconfig: api-staging
  portalIP: 172.30.216.216
  clusterIP: 172.30.216.216
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer:
